# FridaGumTVM

./: .claude_resumes.txt  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  trace.txt
.claude/: settings.local.json
config/: trace_config.json
core/: common.h  custom_hook.cpp  custom_hook.h  entry.cpp  entry.h  gum_init.cpp  gum_init.h  hex_dump.cpp  hex_dump.h  instruction_callback.cpp  instruction_callback.h  instruction_tracer_manager.cpp  instruction_tracer_manager.h  logger_manager.cpp  logger_manager.h  macho_utils.cpp  macho_utils.h  objc_utils.h  objc_utils.mm
prebuild/ios-arm64/: frida-gum-example.c
scripts/: build_ios.sh  gumTrace_ios.js  inject_ipa.sh  inject_jailbreak.sh
